# mpc

./: CMakeLists.txt  README  README.md  runstatistics.csv
communicator/: Writer.cpp
core/: Journal.cpp  mmap_helper.cpp
ctp-run-statistics/: ctp_accept_IC2207_stats.csv  ctp_accept_IC2207_stats_20220713pm.csv  ctp_accept_IC2209_stats.csv  ctp_accept_IC2209_stats_20220708.csv  ctp_accept_IF2207_stats.csv  ctp_accept_IF2207_stats_20220708.csv  ctp_accept_IF2207_stats_20220713pm.csv  ctp_accept_IF2207_stats_20220714am.csv  ctp_accept_IF2207_stats_20220715pm.csv  ctp_accept_IF2207_stats_20220718am.csv  ctp_accept_IF2208_stats.csv  ctp_accept_IF2208_stats_20220714am.csv  ctp_accept_IF2208_stats_20220715pm.csv  ctp_accept_IF2208_stats_20220718am.csv  ctp_accept_stats.csv  ctp_accept_stats_20220705.csv  ctp_accept_stats_20220713pm.csv  ctp_accept_stats_20220714am.csv  ctp_accept_stats_20220715am.csv  ctp_read_stats_20220705.csv  ctp接收中金所指数期货合约次序研究  latencystat.py  readwritecheck.py  单进程数据接受和多进程数据接受同一切片本地内部耗时比较
service/: MpcServer.h  run_service.cpp
src/: CMakeLists.txt  common.h  ctpconfig.h  reader.cpp  writer.cpp  writer_IC2207.cpp  writer_IC2208.cpp  writer_IC2209.cpp  writer_IF2207.cpp  writer_IF2208.cpp  writer_IF2209.cpp
src/communicator/: Writer.cpp  Writer.h
src/core/: Frame.hpp  FrameHeader.h  Journal.cpp  message.h
src/ctp/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  exchangeassets.h  期货品种.txt
src/service/: MpcServer.h
src/utils/: CMakeLists.txt  macros.h  stat.h  utils.h
