cmake_minimum_required(VERSION 3.9)
project(mpc)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
add_subdirectory(socketlib)
add_subdirectory(core)
add_subdirectory(utils)
add_subdirectory(communicator)
add_subdirectory(service)
LINK_DIRECTORIES(./ctp)
add_executable(mpcreader reader.cpp )
add_executable(mpcwriter writer.cpp )
add_executable(mpcwriter_IF writer_IF2207.cpp)
add_executable(mpcwriter_IC writer_IC2209.cpp)
target_link_libraries(mpcreader journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
target_link_libraries(mpcwriter journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
target_link_libraries(mpcwriter_IF journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
target_link_libraries(mpcwriter_IC journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
#FILE(COPY ctp/libthostmduserapi.so DESTINATION ./)
#FILE(COPY ctp/libthosttraderapi.so DESTINATION ./)
