cmake_minimum_required(VERSION 3.9)
project(mpc)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
add_subdirectory(socketlib)
add_subdirectory(core)
add_subdirectory(utils)
add_subdirectory(communicator)
add_subdirectory(service)
LINK_DIRECTORIES(./ctp)
add_executable(mpcreader reader.cpp )
add_executable(mpcwriter writer.cpp )
#add_executable(mpcwriter_IF2208 writer_IF2208.cpp)
#add_executable(mpcwriter_IC2208 writer_IC2208.cpp)
#add_executable(mpcwriter_IF2209 writer_IF2209.cpp)
target_link_libraries(mpcreader journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
target_link_libraries(mpcwriter journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
#target_link_libraries(mpcwriter_IF2208 journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
#target_link_libraries(mpcwriter_IF2209 journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
#target_link_libraries(mpcwriter_IC2208 journal timer communicator mysocket thostmduserapi_se thosttraderapi_se)
#FILE(COPY ctp/libthostmduserapi.so DESTINATION ./)
#FILE(COPY ctp/libthosttraderapi.so DESTINATION ./)
